[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git_gpt"
dynamic = ["version"]
authors = [
    {name = "ShinChven", email = "shinchven@gmail.com"},
]
description = "A CLI tool to generate commit messages and issues based on staged Git diffs using OpenAI GPT-3.5-turbo"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "openai",
    "gitpython",
]

[project.urls]
"Homepage" = "https://github.com/ShinChven/git-gpt.git"
"Bug Tracker" = "https://github.com/ShinChven/git-gpt/issues"

[project.scripts]
git-gpt = "git_gpt.main:cli"

[tool.setuptools]
packages = ["git_gpt"]

[tool.setuptools.dynamic]
version = {attr = "git_gpt.__version__"}

[tool.setuptools.package-data]
git_gpt = ["*"]

[tool.setuptools.exclude-package-data]
"*" = ["assets"]